fix(mobile): make table responsive on mobile

--- a/src/components/common/BottomPanel/styles.css
+++ b/src/components/common/BottomPanel/styles.css
@@ -6,5 +6,6 @@
         justify-content: space-around;
         background-color: #00563b;
         margin-bottom: 0px;
+        padding-bottom: 10px;
     }
 }
