--- a/src/components/common/SidePanel/styles.css
+++ b/src/components/common/SidePanel/styles.css
@@ -1,8 +1,6 @@
 @media only screen and (max-width: 768px) {
     .sidePanel {
-        position: absolute;
-        z-index: 1;
-        height: 90%;
+        display: none !important;
     }
 
     .Button {
