--- a/src/components/pages/myplants.styles.css
+++ b/src/components/pages/myplants.styles.css
@@ -17,6 +17,6 @@
 
 @media only screen and (max-width: 768px) {
     .container {
-        height: calc(100vh - 180px);
+        height: calc(100vh - 190px);
     }
 }
