--- a/src/components/pages/plantinspector.styles.css
+++ b/src/components/pages/plantinspector.styles.css
@@ -17,7 +17,7 @@
 
 @media only screen and (max-width: 768px) {
     .container {
-        height: calc(100vh - 180px);
+        height: calc(100vh - 190px);
     }
 }
 
